<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/draw_background_grad_brown" >
    <TextView
        android:id="@+id/s_p_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:textSize="30dp"
        android:text="@string/s_p_title" />
	<TextView
        android:id="@+id/practice_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="15dp"
        android:textSize="20dp"
        android:text="@string/present_practice_title" />
	
    <Button
        android:id="@+id/s_p_bt_Q1"
        android:background="@drawable/button_stateful_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="30dp"
        android:width="40dp"
        android:height="30dp"
        android:onClick="onClick"
        android:text="@string/p_Q1"
        android:textSize="15dp"
        />
    <!-- 線を引く -->
   	<TextView
   	    android:layout_width="20dp"
   	    android:layout_height="1dp"
   	    android:layout_marginTop="125dp"
   	    android:layout_marginLeft="40dp"
   	    android:background="#000000"
   	    />
    <Button
        android:id="@+id/s_p_bt_Q2"
        android:background="@drawable/button_stateful_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="40dp"
        android:height="30dp"
        android:layout_alignBaseline="@+id/s_p_bt_Q1"
        android:layout_toRightOf="@+id/s_p_bt_Q1"
        android:layout_marginRight="0dp"
        android:onClick="onClick"
        android:text="@string/p_Q2"
        android:textSize="15dp"
        />
    <Button
        android:id="@+id/s_p_bt_Q3"
        android:background="@drawable/button_stateful_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="40dp"
        android:height="30dp"
        android:layout_alignBaseline="@+id/s_p_bt_Q1"
        android:layout_toRightOf="@+id/s_p_bt_Q2"
        android:layout_marginRight="0dp"
        android:onClick="onClick"
        android:text="@string/p_Q3"
        android:textSize="15dp"
        />

    <Button
        android:id="@+id/s_p_bt_Q4"
        android:background="@drawable/button_stateful_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="40dp"
        android:height="30dp"
        android:layout_alignBaseline="@+id/s_p_bt_Q1"
        android:layout_toRightOf="@+id/s_p_bt_Q3"
        android:layout_marginRight="0dp"
        android:onClick="onClick"
        android:text="@string/p_Q4"
        android:textSize="15dp"
        />


	<Button
        android:id="@+id/s_p_bt_Q5"
        android:background="@drawable/button_stateful_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="40dp"
        android:height="30dp"
        android:layout_alignBaseline="@+id/s_p_bt_Q1"
        android:layout_toRightOf="@+id/s_p_bt_Q4"
        android:layout_marginRight="0dp"
        android:onClick="onClick"
        android:text="@string/p_Q5"
        android:textSize="15dp"
        />
	<Button
        android:id="@+id/s_p_bt_Q6"
        android:background="@drawable/button_stateful_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="40dp"
        android:height="30dp"
        android:layout_alignBaseline="@+id/s_p_bt_Q1"
        android:layout_toRightOf="@+id/s_p_bt_Q5"
        android:layout_marginRight="0dp"
        android:onClick="onClick"
        android:text="@string/p_Q6"
        android:textSize="15dp"
        />
	
	
    <Button
        android:id="@+id/s_p_bt_Q7"
        android:background="@drawable/button_stateful_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="30dp"
        android:width="40dp"
        android:height="30dp"
        android:onClick="onClick"
        android:text="@string/p_Q7"
        android:textSize="15dp"
        />
	<Button
        android:id="@+id/s_p_bt_Q8"
        android:background="@drawable/button_stateful_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="40dp"
        android:height="30dp"
        android:layout_alignBaseline="@+id/s_p_bt_Q7"
        android:layout_toRightOf="@+id/s_p_bt_Q7"
        android:layout_marginRight="0dp"
        android:onClick="onClick"
        android:text="@string/p_Q8"
        android:textSize="15dp"
        />
	<Button
        android:id="@+id/s_p_bt_Q9"
        android:background="@drawable/button_stateful_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="40dp"
        android:height="30dp"
        android:layout_alignBaseline="@+id/s_p_bt_Q7"
        android:layout_toRightOf="@+id/s_p_bt_Q8"
        android:layout_marginRight="0dp"
        android:onClick="onClick"
        android:text="@string/p_Q9"
        android:textSize="15dp"
        />
	<Button
        android:id="@+id/s_p_bt_Q10"
        android:background="@drawable/button_stateful_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="40dp"
        android:height="30dp"
        android:layout_alignBaseline="@+id/s_p_bt_Q7"
        android:layout_toRightOf="@+id/s_p_bt_Q9"
        android:layout_marginRight="0dp"
        android:onClick="onClick"
        android:text="@string/p_Q10"
        android:textSize="15dp"
        />
	<Button
        android:id="@+id/s_p_bt_Q11"
        android:background="@drawable/button_stateful_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="40dp"
        android:height="30dp"
        android:layout_alignBaseline="@+id/s_p_bt_Q7"
        android:layout_toRightOf="@+id/s_p_bt_Q10"
        android:layout_marginRight="0dp"
        android:onClick="onClick"
        android:text="@string/p_Q11"
        android:textSize="15dp"
        />
	<Button
        android:id="@+id/s_p_bt_Q12"
        android:background="@drawable/button_stateful_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="40dp"
        android:height="30dp"
        android:layout_alignBaseline="@+id/s_p_bt_Q7"
        android:layout_toRightOf="@+id/s_p_bt_Q11"
        android:layout_marginRight="0dp"
        android:onClick="onClick"
        android:text="@string/p_Q12"
        android:textSize="15dp"
        />
	
	
	
	
	
	<!-- 過去問 -->
	
	<TextView
        android:id="@+id/past_practice_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="15dp"
        android:textSize="20dp"
        android:text="@string/past_practice_title" />
	
	<Button
        android:id="@+id/ps_p_bt_Q1"
        android:background="@drawable/button_stateful_white"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="30dp"
        android:onClick="onClick"
        android:text="@string/past_Q1"
        android:textSize="15dp"
        />
	
    <Button
        android:id="@+id/ps_p_bt_Q2"
        android:background="@drawable/button_stateful_white"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_alignBaseline="@+id/ps_p_bt_Q1"
        android:layout_toRightOf="@+id/ps_p_bt_Q1"
        android:layout_marginRight="0dp"
        android:onClick="onClick"
        android:text="@string/past_Q2"
        android:textSize="15dp"
        />
    <Button
        android:id="@+id/ps_p_bt_Q3"
        android:background="@drawable/button_stateful_white"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_alignBaseline="@+id/ps_p_bt_Q1"
        android:layout_toRightOf="@+id/ps_p_bt_Q2"
        android:layout_marginRight="0dp"
        android:onClick="onClick"
        android:text="@string/past_Q3"
        android:textSize="15dp"
        />

	<Button
        android:id="@+id/ps_p_bt_Q4"
        android:background="@drawable/button_stateful_white"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="30dp"
        android:onClick="onClick"
        android:text="@string/past_Q4"
        android:textSize="15dp"
        />
	
    <Button
        android:id="@+id/ps_p_bt_Q5"
        android:background="@drawable/button_stateful_white"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_alignBaseline="@+id/ps_p_bt_Q4"
        android:layout_toRightOf="@+id/ps_p_bt_Q4"
        android:layout_marginRight="0dp"
        android:onClick="onClick"
        android:text="@string/past_Q5"
        android:textSize="15dp"
        />
    <Button
        android:id="@+id/ps_p_bt_Q6"
        android:background="@drawable/button_stateful_white"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/ps_p_bt_Q4"
        android:layout_toRightOf="@+id/ps_p_bt_Q5"
        android:layout_marginRight="0dp"
        android:onClick="onClick"
        android:text="@string/past_Q6"
        android:textSize="15dp"
        />
</RelativeLayout>