<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/draw_background_orange" >
    <!-- "#8b4513"濃い茶色 -->
    <!-- TextView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="250dp"
        android:background="#8b4513"
        /-->
    
    
    <!-- http://www.colordic.org/ -->
    <!-- コンテンツ -->
    <TextView
        android:id="@+id/toptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:text="@string/tx_title"
        android:textSize="20dp"
        />
    <!-- android:background="#000000"
        android:textColor="#ffffff" -->
    <Button
        android:id="@+id/bt_story"
        android:background="@drawable/draw_button_grad_pink"
        android:textColor="#FFFFFF"
        android:layout_width="140dp"
        android:layout_height="150dp"
        android:layout_below="@+id/toptext"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@+id/toptext"
        android:onClick="onClick"
        android:text="@string/tx_story"
        android:textSize="30dp"
		/>
    <!-- Button
        android:id="@+id/bt_practice"
        android:background="@drawable/draw_button_pink"
        android:textColor="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="220dp"
        android:height="50dp"
        android:layout_below="@+id/bt_story"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="onClick"
        android:text="@string/tx_practice"
        android:textSize="17dp"
        /-->
    <Button
        android:id="@+id/bt_record"
        android:background="@drawable/draw_button_grad_brown"
        android:textColor="#ffffff"
        android:layout_width="140dp"
        android:layout_height="150dp"
        android:layout_toRightOf="@+id/bt_story"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/toptext"
        android:layout_marginTop="10dp"
        android:onClick="onClick"
        android:text="@string/tx_record"
        android:textSize="30dp"
    	/>
        
    <Button 
        android:id="@+id/bt_exit"
        android:background="@drawable/draw_button_grad_green"
        android:textColor="#ffffff"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_below="@+id/bt_story"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/toptext"
        android:onClick="onClick"
        android:text="@string/tx_exit"
        android:textSize="20dp"
        />
        
</RelativeLayout>