<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/draw_background_grad_brown" >
    <TextView
        android:id="@+id/s_st_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:textSize="30dp"
        android:text="@string/s_st_title" />
	<TextView
	    android:id="@+id/present_story_title"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
   	    android:layout_marginTop="50dp"
   	    android:layout_marginLeft="20dp"
	    android:textSize="20dp"
	    android:text="@string/present_story_title"/>
	
    <!-- 一列目 -->
    <ImageButton 
        android:id="@+id/s_st_bt_Q1"
        android:background="@drawable/draw_bt_invisible"
        android:layout_height="40dp"
        android:layout_width="300dp"
        android:src="@drawable/imbt_sect001"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="120dp"
        android:onClick="onClick"
        />
    <ImageButton 
        android:id="@+id/s_st_bt_Q2"
        android:background="@drawable/draw_bt_invisible"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:src="@drawable/imbt_sect002"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="120dp"
        android:onClick="onClick"
        />
    <ImageButton
        android:id="@+id/s_st_bt_Q3"
        android:background="@drawable/draw_bt_invisible"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:src="@drawable/imbt_sect003"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="120dp"
        android:onClick="onClick"
        />
    <ImageButton
        android:id="@+id/s_st_bt_Q4"
        android:background="@drawable/draw_bt_invisible"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:src="@drawable/imbt_sect004"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="120dp"
        android:onClick="onClick"
		/>
    <ImageButton
        android:id="@+id/s_st_bt_Q5"
        android:background="@drawable/draw_bt_invisible"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:src="@drawable/imbt_sect005"
        android:layout_marginTop="240dp"
        android:layout_marginLeft="120dp"
        android:onClick="onClick"
        />
    
    <ImageButton
        android:id="@+id/s_st_bt_Q6"
        android:background="@drawable/draw_bt_invisible"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:src="@drawable/imbt_sect006"
        android:layout_marginTop="280dp"
        android:layout_marginLeft="120dp"
        android:onClick="onClick"
        />
    
    <ImageButton
        android:id="@+id/s_st_bt_Q7"
        android:background="@drawable/draw_bt_invisible"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:src="@drawable/imbt_sect007"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="120dp"
        android:onClick="onClick"
        />
    
    <ImageButton
        android:id="@+id/s_st_bt_Q8"
        android:background="@drawable/draw_bt_invisible"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:src="@drawable/imbt_sect008"
        android:layout_marginTop="360dp"
        android:layout_marginLeft="120dp"
        android:onClick="onClick"
        android:gravity="left"
        />
    <!-- 線を引く -->
    <!--  TextView
        android:layout_width="1dp"
        android:layout_height="400dp"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="112dp"
        android:background="#000000"
        /-->
   	<!--TextView
   	    android:id="@+id/s_st_line01"
   	    android:layout_width="400dp"
   	    android:layout_height="1dp"
   	    android:layout_marginTop="155dp"
   	    android:layout_marginLeft="20dp"
   	    android:background="#000000"
   	    /-->
    <Button 
        android:id="@+id/s_s_bt_return"
        android:background="@drawable/draw_button_grad"
        android:textColor="#ffffff"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_below="@+id/present_story_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:onClick="onClick"
        android:text="@string/st_return"
        />
    
</RelativeLayout>